--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-slick": "^0.29.0",
     "sharp": "^0.32.6",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
